--- a/.github/workflows/crear_tag.yml
+++ b/.github/workflows/crear_tag.yml
@@ -1,31 +1,28 @@
-name: Tag on PR Merger
+name: Tag on PR Merge
 
 on:
   pull_request:
-    types: [closed]
-    branches: [main]
+    types:
+      - closed
+    branches:
+      - main
 
 permissions:
   contents: write
 
-env:
-  TAG_PREFIX: 'v'
-
 jobs:
-  create_tag:
+  tag_on_merge:
+    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true
-    
     steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-        
-    - name: Create semantic tag
-      env:
-        TAG_NAME: ${{ env.TAG_PREFIX }}1.0.${{ github.run_number }}
-      run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-        git tag -a $TAG_NAME -m "Release from PR #${{ github.event.pull_request.number }}"
-        git push origin $TAG_NAME
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Create and push tag
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_EFREN }}
+        run: |
+          TAG_NAME="${{ github.event.pull_request.title }}"
+          git tag "$TAG_NAME"
+          git push origin "$TAG_NAME"
+
