--- a/.github/workflows/crear_tag.yml
+++ b/.github/workflows/crear_tag.yml
@@ -1,15 +1,3 @@
-name: Tag on PR Merge
-
-on:
-  pull_request:
-    types:
-      - closed
-    branches:
-      - main
-
-permissions:
-  contents: write
-
 jobs:
   tag_on_merge:
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
@@ -18,16 +6,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up Git
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+
       - name: Create and push tag
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_EFREN }}
         run: |
-          # Crear un nombre de tag seguro: pr-<numero>-<fecha>
           PR_NUMBER=${{ github.event.pull_request.number }}
           DATE=$(date +'%Y%m%d%H%M%S')
           TAG_NAME="pr-${PR_NUMBER}-${DATE}"
 
-          # Crear y subir el tag
+          echo "Creating tag: $TAG_NAME"
           git tag "$TAG_NAME"
           git push origin "$TAG_NAME"
-
