--- a/.github/workflows/crear_tag.yml
+++ b/.github/workflows/crear_tag.yml
@@ -1,4 +1,4 @@
-name: Tag on PR Merge
+name: Tag on PR Merge: ${{ github.event.pull_request.title }} (from ${{ github.event.pull_request.head.ref }})
 
 on:
   pull_request:
@@ -14,14 +14,35 @@ jobs:
   tag_on_merge:
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Create and push tag
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN_EFREN }}
+      - name: Set up Git config
         run: |
-          TAG_NAME="v1.0.1"
-          git tag "v1.0.1"
-          git push origin "v1.0.1"
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+
+      - name: Create and push tag with PR title, branch, and SHA
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_JAIME }}
+        run: |
+          TITLE="${{ github.event.pull_request.title }}"
+          SOURCE_BRANCH="${{ github.event.pull_request.head.ref }}"
+          SHORT_SHA=$(git rev-parse --short HEAD)
+
+          # Limpiar valores
+          TITLE=$(echo "$TITLE" | tr ' ' '_' | tr -cd '[:alnum:]_.-')
+          SOURCE_BRANCH=$(echo "$SOURCE_BRANCH" | tr ' ' '_' | tr -cd '[:alnum:]_.-')
+
+          TAG_NAME="${TITLE}-${SOURCE_BRANCH}-${SHORT_SHA}"
+
+          echo "Generando tag: $TAG_NAME"
+
+          if git ls-remote --tags origin | grep -q "refs/tags/$TAG_NAME"; then
+            echo "Tag '$TAG_NAME' ya existe. No se crea de nuevo."
+          else
+            git tag "$TAG_NAME"
+            git push origin "$TAG_NAME"
+          fi
