--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,12 +22,13 @@ services:
     environment:
       DATABASE_URL: postgresql://tiendaderopa_0qmi_user:uHwjed0A3URri4b1CGigVz13B3UMHj8d@db:5432/tiendaderopa_0qmi
       FLASK_ENV: development
-      PORT: 5003
+      PORT: 5000
+      FLASK_APP: app.py
     ports:
-      - "5004:5003"
+      - "5000:5000"
     volumes:
       - .:/app
-    command: flask run --host=0.0.0.0 --port 5003
+    command: flask run --host=0.0.0.0 --port 5000
 
 volumes:
   postgres_data:
